--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     width: 100%;
     height: 250px;
     grid-template-areas:
-        "icon nav"
-        "welcome welcome"
+        "icon icon"
+        "welcome1 welcome2"
         "about1 aboutx"
         "abouty about2 "
         "booking booking"
@@ -15,25 +15,51 @@
     grid-template-columns: 1fr 1fr;
 }
 
+#page::before {
+    content: "";
+    grid-area: icon-start / icon-start / welcome2-end / welcome2-end;
+    background-image: url('Gradient.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: -1;
+    /* ensures the background is beneath your grid items */
+}
+
 #page>nav {
-    grid-area: nav;
-    background-color: #ffa08c;
+    grid-area: icon;
+    
     text-align: right;
+    
 
 }
 
-nav.a{
-    padding: 100%;
+li a{
+    text-decoration: none;
+    color: black;
+    size: 100%;
+}
+
+li{
+    display: inline;
+}
+
+ul{
+    list-style-type: none;
 }
 
 .icon {
     grid-area: icon;
-    background-color: purple;
+    
 }
 
 .welcome {
-    grid-area: welcome;
-    background-color: #ffff64;
+    grid-area: welcome1;
+    text-align: center;
+}
+
+.welcome h1, .welcome h3, .welcome p{
+    color:white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .about1 {
