--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ html {
   scroll-behavior: smooth;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 p, h1, h2, h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -22,6 +29,18 @@ h3{
     font-size: 200%;
 }
 
+.highlight1{
+    color:#07549A;
+}
+
+.highlight2{
+    color:#46C5F8;
+}
+.booking1 h3{
+    color:white;
+    font-size: 150%;
+}
+
 #page {
     display: grid;
     width: 100%;
@@ -35,7 +54,7 @@ h3{
         "person1 person2"
         "contact contact"
         "foot1 foot2";
-    grid-template-rows: 150px 700px 300px 300px 700px 700px 600px 150px;
+    grid-template-rows: 150px 850px 500px 500px 1000px 700px 600px 150px;
     grid-template-columns: 1fr 1fr;
 }
 
@@ -50,17 +69,16 @@ h3{
 }
 
 #page>nav {
-    grid-area: icon;
-    
-    text-align: right;
-    
-
+    grid-area: icon;    
+    text-align: right;    
 }
 
 li a{
     text-decoration: none;
-    color: black;
-    size: 100%;
+    color: white;
+    font-size: 150%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-right: 10px;
 }
 
 li{
@@ -78,8 +96,8 @@ ul{
 
 .welcome {
     grid-area: welcome1;
-    text-align: center;
-
+    text-align: left;
+    padding-left: 100px;
     
 }
 
@@ -97,11 +115,14 @@ ul{
     grid-area: welcome2;
     align-items: center;
     justify-content: center;
+    padding-bottom: 100px;
 }
 
 .about1 {
     grid-area: about1;
-    text-align: center;
+    text-align: right;
+    padding-right: 100px;
+    padding-top: 85px;
 }
 .aboutx{
     display: flex;
@@ -111,7 +132,9 @@ ul{
 
 .about2 {
     grid-area: about2;
-    text-align: center;
+    text-align: left;
+    padding-left: 100px;
+    padding-top: 85px;
 }
 
 .abouty{
@@ -121,16 +144,19 @@ ul{
 }
 
 .booking1 {
-    background-color: gainsboro;
+    background-color: #5299AC;
     grid-area: booking1;
+    padding-top: 180px;
+    padding-left: 100px;
     
 }
 .booking2 {
     grid-area: booking2;
-    background-color: gainsboro;
+    background-color: #5299AC;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-right: 100px;
 }
 
 .person1 {
@@ -139,7 +165,7 @@ ul{
     grid-area: person1;
     align-items: center;
     justify-content: center;
-    background-color: lightblue;
+    background-image: url('Gradient2.jpg');
 }
 
 .person2 {
@@ -148,7 +174,7 @@ ul{
     grid-area: person2;
     align-items: center;
     justify-content: center;
-    background-color: lightblue;
+    background-image: url('Gradient2.jpg');
 }
 
 .contact {
@@ -200,16 +226,20 @@ ul{
 .footer1 {
     grid-area: foot1;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: blue;
+    align-items:center;
+    padding-left: 900px;
+    justify-content:center;
+    background-color: #07549A;
     border-right: solid 1px white;
 }
 .footer2 {
     grid-area: foot2;
-    background-color: blue;
+    background-color: #07549A;
     border-left: solid 1px white;
+    font-size: 10px;
     
+    padding-left: 10px;
+    color:white;
 }
 
 button{
@@ -227,17 +257,50 @@ button:hover{
     background-color: #0056b3; /* Darker blue on hover */
 }
 
-#bookBtn{
-    padding: 20px 250px;
+#bookBtn1{
+    padding: 0 90px;
+    line-height: 25px; 
+    height: 60px;
   margin-top: 10px;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;  
+  font-size: 150%;
   border: solid #0056b3 2px;
   border-radius: 35px; /* Rounded corners */
   background-color: gainsboro; /* Bootstrap primary blue, you can change it */
   color: black;
   cursor: pointer;
+  white-space: nowrap;  /* Prevents the text from wrapping */
+  overflow: hidden;     /* Ensures that the text doesn't overflow the button boundaries */
+  text-overflow: ellipsis; /* Adds an ellipsis if the text is too long to fit */
   transition: background-color 0.3s ease;
 }
 
-#bookBtn:hover{
+#bookBtn1:hover{
+    background-color: #0056b3; /* Darker blue on hover */
+}
+
+#bookBtn2{
+    padding: 0 250px;
+    line-height: 25px; 
+    height: 80px;
+  margin-top: 10px;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;  
+  font-size: 150%;
+  border: solid #0056b3 2px;
+  border-radius: 35px; /* Rounded corners */
+  background-color: gainsboro; /* Bootstrap primary blue, you can change it */
+  color: black;
+  cursor: pointer;
+  white-space: nowrap;  /* Prevents the text from wrapping */
+  overflow: hidden;     /* Ensures that the text doesn't overflow the button boundaries */
+  text-overflow: ellipsis; /* Adds an ellipsis if the text is too long to fit */
+  transition: background-color 0.3s ease;
+}
+
+#bookBtn2:hover{
     background-color: #0056b3; /* Darker blue on hover */
 }
