--- a/phonestyle.css
+++ b/phonestyle.css
@@ -66,8 +66,8 @@ h3{
         "person2 person2"
         "contact contact"
         "foot1 foot2";
-    grid-template-rows: 150px 850px 500px 500px 1000px 700px 600px 600px 600px 150px;
-    grid-template-columns: 400px 400px;
+    grid-template-rows: 150px 850px 500px 400px 400px 500px 600px 600px 600px 150px;
+    grid-template-columns: 500px 500px;
 } 
 
 
@@ -87,8 +87,8 @@ h3{
 }
 
 #iconid{
-    width: 250px;
-    height:75px;
+    width: 300px;
+    height:100px;
 }
 
 li a{
@@ -139,7 +139,7 @@ ul{
     text-align: center;
     padding-top: 85px;
     background-color: white;
-    width: 580px;
+    width: 100%;
 }
 .aboutx{
     display: none;
@@ -153,7 +153,7 @@ ul{
     text-align: center;
     padding-top: 85px;
     background-color: white;
-    width:580px;
+    width:100%;
     height: 500px;
 }
 
@@ -169,7 +169,7 @@ ul{
     grid-area: booking1;
     text-align: center;
     background-color: white;
-    width: 580px;
+    width: 100%;
     
 }
 .booking2 {
@@ -188,6 +188,7 @@ ul{
     align-items: center;
     justify-content: center;
     background-color: white;
+    text-align: center;
 }
 
 .person2 {
@@ -197,6 +198,7 @@ ul{
     align-items: center;
     justify-content: center;
     background-color: white;
+    text-align: center;
 }
 
 .person1 p, .person2 p{
@@ -254,7 +256,7 @@ ul{
     grid-area: foot1;
     display: flex;
     align-items:center;
-    padding-left: 100px;
+    padding-left: 400px;
     justify-content:center;
     background-color: #07549A;
     border-right: solid 1px white;
