--- a/phonestyle.css
+++ b/phonestyle.css
@@ -14,19 +14,19 @@ p, h1, h2, h3{
 }
 
 p{
-    font-size: 150%;
+    font-size: 300%;
 }
 
 h1{
-    font-size: 250%;
+    font-size: 450%;
 }
 
 h2{
-    font-size: 200%;
+    font-size: 400%;
 }
 
 h3{
-    font-size: 150%;
+    font-size: 350%;
 }
 
 .highlight1{
@@ -42,7 +42,7 @@ h3{
 }
 
 .booking1 h3{
-    font-size: 150%;
+    font-size: 350%;
     
 }
 
@@ -66,7 +66,7 @@ h3{
         "person2 person2"
         "contact contact"
         "foot1 foot2";
-    grid-template-rows: 150px 850px 500px 400px 400px 500px 600px 600px 600px 150px;
+    grid-template-rows: 300px 1600px 1000px 800px 800px 1300px 1200px 1200px 1200px 300px;
     grid-template-columns: 500px 500px;
 } 
 
@@ -83,12 +83,13 @@ h3{
 
 #page>nav {
     grid-area: icon;    
-    text-align: right;    
+    text-align: right; 
+    font-size: 120%;   
 }
 
 #iconid{
-    width: 300px;
-    height:100px;
+    width: 600px;
+    height:200px;
 }
 
 li a{
@@ -131,7 +132,12 @@ ul{
     grid-area: welcome2;
     align-items: center;
     justify-content: center;
-    padding-bottom: 100px;
+    padding-bottom: 250px;
+    
+}
+
+.deerimg img{
+    height: 120%;
 }
 
 .about1 {
@@ -287,16 +293,16 @@ button:hover{
 }
 
 #bookBtn1{
-    padding: 0 90px;
+    padding: 0 300px;
     line-height: 25px; 
-    height: 60px;
+    height: 200px;
   margin-top: 10px;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;  
-  font-size: 150%;
+  font-size: 300%;
   border: solid #0056b3 2px;
-  border-radius: 35px; /* Rounded corners */
+  border-radius: 105px; /* Rounded corners */
   background-color: white; /* Bootstrap primary blue, you can change it */
   color: black;
   cursor: pointer;
