--- a/phonestyle.css
+++ b/phonestyle.css
@@ -68,7 +68,7 @@ h3{
         "person2 person2"
         "contact contact"
         "foot1 foot2";
-    grid-template-rows: 300px 1600px 1000px 800px 500px 850px 650px 1300px 1200px 1200px 1800px 300px;
+    grid-template-rows: 300px 1600px 1300px 800px 500px 850px 650px 1300px 1200px 1200px 1800px 300px;
     grid-template-columns: 500px 500px;
 } 
 
@@ -117,12 +117,18 @@ ul{
 
 .welcome {
     grid-area: welcome1;
-    text-align: center;  
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
 }
 
 .welcome h1, .welcome h3, .welcome p, .welcome h2{
     color:white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   
 }
 
 .about1 p{
@@ -139,7 +145,9 @@ ul{
 }
 
 .deerimg img{
-    height: 150%;
+    height: 120%;
+    padding-top: 430px;
+
 }
 
 .about1 {
@@ -372,3 +380,18 @@ button:hover{
 #bookBtn2:hover{
     background-color: #0056b3; /* Darker blue on hover */
 }
+
+.brush {
+
+  background-image: url('PBrush.png'); /* Replace with your actual image path */
+  width: 803px;
+  height: 249px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 200%;
+}
+
+
+
