--- a/phonestyle.css
+++ b/phonestyle.css
@@ -10,7 +10,7 @@ html, body {
 }
 
 h1, h2, h3{
-    font-family: 'Spectral', serif;
+    font-family: 'Permanent Marker', cursive;
 }
 
 p{
@@ -130,7 +130,7 @@ ul{
 
 .welcome h1, .welcome h3, .welcome h2{
     color:white;
-    font-family: 'Spectral', serif;
+    font-family: 'Permanent Marker', cursive;
    
 }
 
@@ -343,13 +343,15 @@ button:hover{
     background-color: #0056b3; /* Darker blue on hover */
 }
 
+/*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
+
 #bookBtn1{
     padding: 0 300px;
     line-height: 25px; 
     height: 200px;
   margin-top: 10px;
   text-align: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Permanent Marker', cursive;
   font-weight: bold;  
   font-size: 300%;
   border: solid #0056b3 2px;
@@ -373,7 +375,7 @@ button:hover{
     height: 150px;
   margin-top: 10px;
   text-align: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Permanent Marker', cursive;
   font-weight: bold;  
   font-size: 220%;
   border: solid #0056b3 2px;
