--- a/phonestyle.css
+++ b/phonestyle.css
@@ -101,7 +101,7 @@ li a{
     text-decoration: none;
     color: white;
     font-size: 200%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Permanent Marker', cursive;
     padding-right: 10px;
 }
 
