--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ h3{
 
 .highlight1{
     color:#07549A;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Fira Sans', sans-serif;
 }
 
 .highlight2{
     color:#46C5F8;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Fira Sans', sans-serif;
 }
 .booking1 h3, .booking1 h2, .booking1 p{
     color:white;
