--- a/phonestyle.css
+++ b/phonestyle.css
@@ -72,7 +72,7 @@ h3{
         "contact contact"
         "foot1 foot2";
     grid-template-rows: 300px 1600px 1300px 850px 500px 850px 650px 1300px 1200px 1200px 1800px 300px;
-    grid-template-columns: 500px 500px;
+    grid-template-columns: 1fr 1fr;
 } 
 
 
